--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
   "files": [
     "/dist"
   ],
+  "scripts": {
+    "build": "tsc"
+  },
   "devDependencies": {
     "@jest/globals": "^29.7.0",
     "@types/jest": "^29.5.12",
