--- a/package.json
+++ b/package.json
@@ -24,11 +24,15 @@
   },
   "devDependencies": {
     "@jest/globals": "^29.7.0",
+    "@types/benchmark": "^2.1.5",
     "@types/jest": "^29.5.12",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
+    "benchmark": "^2.1.4",
     "eslint": "^8.56.0",
     "jest": "^29.7.0",
+    "lodash": "^4.17.21",
+    "microtime": "^3.1.1",
     "ts-jest": "^29.1.2",
     "typescript": "^5.3.3"
   }
